docs: add javadoc to RoomsController